--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
   },
@@ -21,6 +22,8 @@
     "knex": "^0.19.2",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
+    "postgrator": "^3.10.2",
+    "postgrator-cli": "^3.1.0",
     "uuid": "^3.3.2",
     "valid-url": "^1.0.9",
     "winston": "^3.2.1",
